# SyedMCPServer

./: .gitignore  README.md  claude_desktop_config.json  pyproject.toml  test_server.py  test_stock_server.py  test_weather_direct.py
MCP_Server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp_server/: mcp_server.py
models/: __init__.py
service/: __init__.py  service.py
stock/: README.md  claude_desktop_config.json  pyproject.toml  test_stock_server.py
stock/MCP_Stock_Server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
stock/mcp_server/: mcp_server.py
stock/models/: stock_data.py
stock_service/: __init__.py  stock_service.py
weather/: README.md  claude_desktop_config.json  pyproject.toml  server.py  test_weather_server.py
weather.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
weather/MCP_Weather_Server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
weather/mcp_server/: mcp_server.py
weather/weather/: server.py
weather/weather.egg-info/: SOURCES.txt  entry_points.txt
weather/weather_service/: __init__.py
