[project]
name = "MCP_Weather_Server"
version = "0.1.0"
description = "MCP Weather server"
authors = [
    { name = "Syed" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
    "yfinance"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[project.scripts]
mcp_weather_server = "mcp_server.mcp_server:run"

[tool.setuptools.packages.find]
where = ["."]

